2010-02-27  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.c (search_str): Bugfix for empty haystack case: checks for end
	of string must use postincrement on the index, otherwise the access
	goes past the null terminator.

2010-02-27  Kaz Kylheku  <kkylheku@gmail.com>

	* match.c (match_lines): Bugfix in freeform directive.
	If the virtual line is partially matched, the remainder of
	the line is folded back into list form. In this case, the
	data line number must be incremented. Otherwise the calling
	context may conclude that no progress was made, and
	skip a line of input. I.e. the unmatched part of the input
	is a new line, even if there had originally
	been no line break at that point.

2010-02-27  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.h (split_str_sep): Declared.

	* lib.c (split_str_sep): New function. 
	(split_str): Semantics changed; the second argument
	is not a set of separator characters (like in split_str_sep)
	but rather a separator string. Fixed bug: if the input
	string is empty, the output list is empty. This caused
	infinite looping behavior in @(freeform).

2010-02-24  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.c (init_str): Bugfix: copy only len characters, not len + 1, so
	that we don't clobber the null terminator in the target string, or try
	read past the end of the source data.  This affects the @(freeform)
	directive.

2010-01-26  Kaz Kylheku  <kkylheku@gmail.com>

	Version 033

	Addressed exponential memory behaviors
	in derivative-based regex matching.

	* txr.c (version): Bumped to 033.

	* txr.1: Set version to 033.

	* configure: Bumped txr_ver to 033.

2010-01-26  Kaz Kylheku  <kkylheku@gmail.com>

	hash.c (hash_process_weak): There is no point in fixing up
	the type codes of spuriously reached nodes; reached objects
	will not be removed by weak processing and so it's better
	to just detect those situations and short-circuit.

2010-01-26  Kaz Kylheku  <kkylheku@gmail.com>

	Optimization in derivative-based regex engine.